Add endpoints. Clean up.
